--- a/templates/lleida.html
+++ b/templates/lleida.html
@@ -85,6 +85,13 @@
 		opacity: 0.7;
 	}
 	
+	#logo {
+        position: absolute;
+        bottom: 0%;
+        left: 7%;
+        z-index: 1000;
+	}
+	
 </style>
 
 {% endblock %}
@@ -93,6 +100,8 @@
 
 
 {% block body %}
+
+	<div id="logo"><img src='../static/media/images/open-dai-logo-for-web-bottom.png' style="width:400px"/></div>
 
 	{% leaflet_map "map" %}
 	
@@ -160,8 +169,13 @@
 		};
 		
 		// Layers
-		var controlLayer = L.control.layers(baseMaps,null, {collapsed:true});
+		var controlLayer = L.control.layers(baseMaps,null, {collapsed:true, position:'bottomright'});
 		controlLayer.addTo(map);
+		
+		// moving defalt zoom
+		$('.leaflet-control-zoom').hide()
+		var zoomControl = L.control.zoom({position:'bottomleft'});
+		zoomControl.addTo(map);
 		
 		    // Pois Layer
 		   	var poisMarker = L.AwesomeMarkers.icon({
