--- a/templates/lleida.html
+++ b/templates/lleida.html
@@ -117,6 +117,8 @@
 		    	normal_style = 997,
 		    	midnight_style = 999;
 	    
+	    	// CloudMade Tile Provider [Deprecated]
+	    	/*
 		    var	base_key = 'BC9A493B41014CAABB98F0471D759707'
 		     	kram_key = '32186e05680a4c8dacc22302bc6265c1';
 	    
@@ -126,12 +128,25 @@
 			var minimal = L.tileLayer(cloudmadeUrl, {key: kram_key, styleId: minimal_style, attribution: cloudmadeAttribution}),
 				normal = L.tileLayer(cloudmadeUrl, {key: kram_key, styleId: normal_style, attribution: cloudmadeAttribution}),
 				midnight  = L.tileLayer(cloudmadeUrl, {key: kram_key, styleId: midnight_style,   attribution: cloudmadeAttribution});
+				
+			*/
+				
+			// MapBox Tile Provider	
+			var mapboxeUrl = 'https://a.tiles.mapbox.com/v3/mplanaguma.ifj390dn/{z}/{x}/{y}.png',
+				mpaboxAttribution = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://www.mapbox.com/about/maps/">MapBox</a>';
+			
+			var mapboxTiles = L.tileLayer(mapboxeUrl,{attribution:mpaboxAttribution});
+			
+			// OSM Tile Provider	
+			var	osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+				osmAttribution = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>';
+			
+			var osmTiles = L.tileLayer(osmUrl,{attribution:osmAttribution});
 		
 			map.setView([41.6175899, 0.6200146], 14);
-			map.addLayer(normal);
-			
+			map.addLayer(mapboxTiles);
+		
 	    	// colors
-			
 			var lines = ['L1', 'L2', 'L3', 'L4', 'L5', 'L6', 'L7', 'L8', 'L9', 'L10'];
 			
 			function getColorLines(line) {
@@ -148,7 +163,6 @@
 		            case 'L1':   return "#000000";
 		           }
 			}
-			
 		
 			function style(feature) {
 			    return {
@@ -163,14 +177,14 @@
 	    
 	    // controls
 		var baseMaps = {
-		    "Minimal": minimal,
-		    "Normal": normal,
-		    "Night View": midnight
+		    "OSM": osmTiles,
+		    "MapBox": mapboxTiles
 		};
 		
 		// Layers
 		var controlLayer = L.control.layers(baseMaps,null, {collapsed:true, position:'bottomright'});
 		controlLayer.addTo(map);
+		
 		
 		// moving defalt zoom
 		$('.leaflet-control-zoom').hide()
