--- a/templates/lleida.html
+++ b/templates/lleida.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block load %}{% load leaflet_tags %}{% endblock %}
 
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+{% block head %}
+	{% leaflet_js plugins="ALL" %}
+    {% leaflet_css plugins="ALL" %}
 
 <!-- Bootstrap -->    
 <link rel="stylesheet" href="../static/media/bootstrap/css/bootstrap.min.css">
