--- a/templates/bcn.html
+++ b/templates/bcn.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}BCN{% endblock %}
+{% block title %}BCN OpenDAI Pilot{% endblock %}
 
 {% block head %}
 	
